Fix #117760: Regression: Ctrl+Z causes Losing Audio Sound

Cused by 29aaa2922d

This change is more of a work-around, since there should be no such
tagging required. This change brings the behavior closer to what it
was before the offending commit, and solve an immediate user-level
regression.

Pull Request: https://projects.blender.org/blender/blender/pulls/117834